UX Projects page
commented out redundant markup

--- a/css/1080.less
+++ b/css/1080.less
@@ -99,7 +99,7 @@ header#reCreate .max1260px {
    margin-left: 0;
 }
 
-/* MIXINS */
+/* CIRCLE MIXINS */
 .circleMixin-210px {
 	-moz-border-radius:50%;
 	-webkit-border-radius:50%;
@@ -109,7 +109,7 @@ header#reCreate .max1260px {
 	background-color:white;
 	overflow:hidden;
 }
-/* END MIXINS */
+/* END CIRCLE MIXINS */
 
 /* FUNCTIONS */
 .stroke(@outline-width : 3px, @outline-style : solid, @color : black) {
@@ -162,9 +162,9 @@ header#reCreate .max1260px {
 	.stroke(3px, solid, #000);
 	
 	& h2.cover {
-		margin-left:64px;
-		margin-top:111px;
-		font-size:26px;	
+		font-size: 1.7em;
+		margin-left: 25%;
+		margin-top: 111px;	
 	}
 }
 
@@ -186,9 +186,9 @@ header#reCreate .max1260px {
 	.stroke(3px, solid, #000);
 	
 	& h2.cover {
-		font-size:26px;
-		margin-left:45px;
-		margin-top:86px;
+		font-size: 1.7em;
+		margin-left: 21%;
+		margin-top: 86px;
 		/* letter-spacing: 5px;*/
 	}	
 }
@@ -206,9 +206,9 @@ header#reCreate .max1260px {
 	}*/	
 	
 	& h2.cover {
-		font-size:20px;
-		margin-left:7%;
-		margin-top:88px;
+		font-size: 1.3em;
+		margin-left: 5%;
+		/*margin-top:35%;*/
 		/*text-align:center;*/
 	}	
 }
@@ -241,11 +241,11 @@ header#reCreate .max1260px {
 	.circleMixin-210px;
 	.stroke(3px, solid, #000);
 	
-	& h2.cover {
+	/*& h2.cover {
 		font-size:26px;
 		margin-left:4px;
 		margin-top:83px;
-	}		
+	}*/		
 }
 			
 #earthship-seattle {
