--- a/css/480.less
+++ b/css/480.less
@@ -25,9 +25,7 @@ h2 {
 @divColor:rgba(255,255,255,.4);
 /*** END VARIABLES ***/
 
-/*** MIXINS ***/
-
-
+/*** GLOBAL MIXINS ***/
 .projectDetailsTablet {
 	& h1 {
 		padding-bottom:25px;
@@ -161,9 +159,9 @@ h2 {
           text-decoration: underline;
 	}
 }
-/*** END MIXINS ***/
+/*** END GLOBAL MIXINS ***/
 
-/* FUNCTIONS  outline-color, outline-style, outline-width. */
+/*** FUNCTIONS  outline-color, outline-style, outline-width. ***/
 .stroke(@outline-width : 2px, @outline-style : solid, @color : black) {
 	-moz-border:  @outline-width @outline-style @color;
 	-webkit-border:  @outline-width @outline-style @color;
@@ -171,49 +169,16 @@ h2 {
 	border: @outline-width @outline-style @color;
 	overflow: hidden;
 }
-/* END FUNCTIONS */
+/*** END FUNCTIONS ***/
 
-/*** HOME PAGE ***/
-.header-main {
-	padding:0 10px;
+/*** ALL PAGES - GLOBAL STYLES ***/
+.page-body {
+	max-width: 1260px; /* 1260px of columns + 2 x 10px margin = 1280px */
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: .15em;
 }
-
-.header-main p {
-	color:#FFF;
-	width:300px;	
-	display:inline;
-	font-size:2.5em;
-	position:relative;
-	line-height:100px;
-}
-
-.home-page-text h2 {
-	font-size:1.75em;
-	margin-top:.75em;
-	margin-bottom:.4em;	
-}
-
-/*** CONTACT ICONS ***/
-.contact-icons {
-	float:right;
-	max-width: none;
-	width: 100px;
-	position: relative; /* position relative to normal position */
-	top:20px;
-}
-
-i.icon-github {
-	/*width:42.85714286%;*/ /* 60/140px */
-	float:left;
-	font-size:45px;	
-}
-
-i.icon-linkedin {
-	/*width:42.85714286%;*/ /* 60/140px */
-	float:right;
-	font-size:45px;	
-}
-/*** END CONTACT ICONS ***/
+/*** END ALL PAGES - GLOBAL STYLES ***/
 
 /*** ONE-PAGE NAV MAIN CONTROLS ***/
 .page {
@@ -326,6 +291,22 @@ nav li a {
 	height:100px;
 	line-height:100px;
 	margin-bottom:30px;	
+	padding:0 10px;
+}
+
+.header-main p {
+	color:#FFF;
+	width:300px;	
+	display:inline;
+	font-size:2.5em;
+	position:relative;
+	line-height:100px;
+}
+
+.home-page-text h2 {
+	font-size:1.75em;
+	margin-top:.75em;
+	margin-bottom:.4em;	
 }
 
 .home-page-text {
@@ -334,10 +315,32 @@ nav li a {
 	/* padding:0 20px; */
 	/* padding:0 20px 0 0; */
 }
+
+/*** CONTACT ICONS ***/
+.contact-icons {
+	float:right;
+	max-width: none;
+	width: 100px;
+	position: relative; /* position relative to normal position */
+	top:20px;
+}
+
+i.icon-github {
+	/*width:42.85714286%;*/ /* 60/140px */
+	float:left;
+	font-size:45px;	
+}
+
+i.icon-linkedin {
+	/*width:42.85714286%;*/ /* 60/140px */
+	float:right;
+	font-size:45px;	
+}
+/*** END CONTACT ICONS ***/
 /*** END HOME PAGE ***/
 
-/*** PROJECT PAGE - ALL CIRCLE ICONS ***/
-/* THE PAGE ITSELF */
+/***** UX PROJECTS PAGE - ALL CIRCLE ICONS *****/
+/* THE UX PROJECTS PAGE ITSELF */
 #page-projects {
 	top: 100%;
 	/*height: 100%;*/
@@ -350,14 +353,348 @@ nav li a {
 	clear: both;
 }
 
-/*** ALL PAGES - GLOBAL STYLES ***/
-.page-body {
-	max-width: 1260px; /* 1260px of columns + 2 x 10px margin = 1280px */
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: .15em;
+/*** CIRCLE MIXINS ***/
+.allCirclesMixin {
+	.circleMixin-70px;
+ 	.stroke(2px, solid, #000);
+	
+	a {
+		display:block;
+		width:100%;
+		height:100%;	
+	}
+	
+	&:hover .cover {
+		opacity:1;
+		overflow:hidden;
+	}
+	
 }
-/*** END ALL PAGES - GLOBAL STYLES ***/
+
+.circleMixin-70px {
+	-moz-border-radius:50%;
+	-webkit-border-radius:50%;
+	border-radius:50%;
+	width:70px;
+	height:70px;
+	background-color:white;
+	overflow:hidden;
+}
+/*** END CIRCLE MIXINS ***/
+
+/* CIRCLE BEHAVIORS */
+.mobile-rectangle,
+.greyscale-circle-140,
+.color-circle-140,
+.greyscale-circle,
+.color-circle {
+	display:none;
+}
+
+.greyscale-circle-70 {
+	position:absolute;
+	top:0;
+	z-index:2;
+	opacity:1;
+	overflow:hidden;
+	display:block;	
+	
+	-moz-transition:opacity 500ms ease-out 10ms;
+	-webkit-transition:opacity 500ms ease-out 10ms;
+	transition:opacity 500ms ease-out 10ms;
+	
+	.project:hover & {
+		opacity: 0; 
+		overflow: hidden;
+	}
+}
+
+.color-circle-70 {
+	position:absolute;
+	z-index:1;
+	top:0;
+	display:block;
+	overflow:hidden;
+}
+
+/*** EACH PROJECT CIRCLE - POSITION & IMAGES ***/
+.cover {
+	opacity:0;
+	margin-left:20px;
+	margin-top:20px;
+	position:absolute;
+	z-index:3;
+	
+	-moz-transition:opacity 2s;
+	-webkit-transition:opacity 2s;
+	transition:opacity 2s;
+	
+	-moz-transition-delay: .5s;
+	-webkit-transition-delay: .5s;
+	transition-delay: .5s;
+	
+	overflow:hidden;
+}
+
+h2.cover {
+	font-size:24px;
+}
+
+#project1 {
+	margin-right:-1.5%;	
+	position:relative;
+	/*background-color:@divColor;*/
+	clear: both;
+	display: block;
+}
+
+#artist {
+ .circleMixin-70px;
+ .stroke(2px, solid, #000);
+ float:right;
+	a {
+		display:block;
+		width:100%;
+		height:100%;
+	}
+	
+	& h2.cover {
+		color:#FFF;
+		margin-left:14px;
+		margin-top:38px;
+		font-size:.85em;	
+	}
+	
+	&:hover .cover {
+		opacity:1;
+	}
+	
+}
+
+#project2 {
+	padding-left:percentage(140/940);
+	z-index:40;
+	position:absolute;
+	top:10%;
+	/*background-color:@divColor;*/
+	clear: both;
+	display: block;
+}
+
+#re-create {
+ .circleMixin-70px;
+ .stroke(2px, solid, #000);
+ clear: both;
+	a {
+	  display:block;
+	  width:100%;
+	  height:100%;
+	  overflow:hidden;
+	}
+	
+	& h2.cover {
+		color:#000;
+		margin-left:31px;
+		margin-top:16px;
+		font-family: "Myriad Pro", "PT Sans", sans-serif;
+		font-size:8px;	
+		width:58px;
+		overflow:hidden;
+	}
+	
+	&:hover .cover {
+		opacity:1;
+		overflow:hidden;
+	}
+}
+
+#project3 {
+	padding-left:percentage(320/940);
+	z-index:30;
+	position:absolute;
+	top:15%;
+	/*background-color:@divColor;*/	
+}
+
+#mark {
+ .circleMixin-70px;
+ .stroke(2px, solid, #000);
+	a {
+		display:block;
+		width:100%;
+		height:100%;
+		overflow:hidden;
+	}
+	
+	& h2.cover {
+		font-size:.8em;
+		margin-left:5%;
+		margin-top:40%;
+		color:#7ED9EF;
+		font-family:"Gotham";
+		letter-spacing:3px;
+		overflow:hidden;
+		display:block;
+	}
+	
+	&:hover .cover {
+		opacity:1;
+		overflow:hidden;
+	}
+}
+
+#project4 {
+	clear:both;
+	padding-left:percentage(610/940);
+	position:absolute;
+	top:35%;
+	/*background-color:@divColor;*/
+	z-index:10;
+}
+
+#trombone {
+ .circleMixin-70px;
+ .stroke(2px, solid, #000);
+ float:right;
+	a {
+		display:block;
+		width:100%;
+		height:100%;	
+	}
+	
+	& h2.cover {
+		font-size: .7em;
+		margin-left: 0;
+		margin-top: 0;
+		color: #B5A642;
+		text-align: center;
+		font-family: "Trebuchet MS";
+		line-height: 3;
+	}
+	
+	&:hover .cover {
+		opacity:1;
+		overflow:hidden;
+	}
+}
+
+#project5 {
+	clear:both;
+	padding-left:percentage(45/940);
+	position:absolute;
+	top:52%;
+	/*background-color:@divColor;*/
+	z-index:95;	
+}
+
+#home-connect {
+	.allCirclesMixin;
+	.circleMixin-70px;
+	/*background-color:#CEE9FC;*/
+	
+	& h2.cover {
+		font-size:8px;
+		margin-left:8%;
+		margin-top:42%;
+		color:#FFF;
+		text-align:center;
+		display:block;
+	}	
+}
+
+#project6 {
+	clear:both;
+	padding-left:percentage(220/940);
+	position:absolute;
+	top:47%;
+	/*background-color:@divColor;*/
+	z-index:65;
+}
+
+#major-exploration {
+ 	.allCirclesMixin;
+	.circleMixin-70px;
+	
+	& h2.cover {
+		font-size:.55em;
+		margin-left:1%;
+		margin-top:30%;
+		color:red;
+		text-align:center;
+		display:block;
+	}
+}
+
+#project7 {
+	clear:both;
+	padding-left:percentage(155/940);
+	position:absolute;
+	top:75%;
+	z-index:90;
+}
+
+#giddy-throng {
+	.allCirclesMixin;
+	.circleMixin-70px;
+	
+ 	& h2.cover {
+		font-size:18px;
+		margin-left:3px;
+		margin-top:55px;
+		color:red;
+		text-align:center;
+	}
+}
+
+#project8 {
+	clear:both;
+	padding-left:percentage(600/940);
+	position:absolute;
+	top:71%;
+	/*background-color:@divColor;*/
+	z-index:60;
+}
+
+#earthship-seattle {
+	.allCirclesMixin;
+	.circleMixin-70px;
+	
+ 	& h2.cover {
+		font-family:"PT Mono";
+		font-size:.7em;
+		margin-left:-5px;
+		margin-top:20%;
+		color:#FFF;
+		text-align:center;
+		text-shadow: 0px 0px 5px #000;
+	}
+}
+
+#project9 {
+	clear:both;
+	padding-left:percentage(740/940);
+	position:absolute;
+	top:65%;
+	/*background-color:@divColor;*/
+	z-index:50;
+}
+
+#vo {
+	.allCirclesMixin;
+	.circleMixin-70px;
+	
+ 	& h2.cover {
+		font-size:18px;
+		margin-left:12%;
+		margin-top:45px;
+		color:#FFF;
+		text-align:center;
+		text-shadow: 0px 0px 5px #000;
+		
+	}
+}
+/*** END EACH PROJECT CIRCLE - POSITION & IMAGES ***/
+/***** END UX PROJECTS PAGE - ALL CIRCLE ICONS *****/
 
 /* EACH PROJECT PAGE */
 .menu-content {
@@ -805,356 +1142,14 @@ textarea {
 
 /* IMAGE SIZES */
 .project_details_img_large {
-	display:block;	
+	display: block;	
 }
 
 .project_details_img_small {
-	display:none;	
+	display: none;	
 }
 
 .project_details_img.no-border {
-	border:none;
+	border: none;
 }
 /* END IMAGE SIZES */
-
-/*** MIXINS ***/
-.allCirclesMixin {
-	.circleMixin-70px;
- 	.stroke(2px, solid, #000);
-	
-	a {
-		display:block;
-		width:100%;
-		height:100%;	
-	}
-	
-	&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}
-	
-}
-
-.circleMixin-70px {
-	-moz-border-radius:50%;
-	-webkit-border-radius:50%;
-	border-radius:50%;
-	width:70px;
-	height:70px;
-	background-color:white;
-	overflow:hidden;
-}
-/*** END MIXINS ***/
-
-/* CIRCLE BEHAVIORS */
-.mobile-rectangle,
-.greyscale-circle-140,
-.color-circle-140,
-.greyscale-circle,
-.color-circle {
-	display:none;
-}
-
-.greyscale-circle-70 {
-	position:absolute;
-	top:0;
-	z-index:2;
-	opacity:1;
-	overflow:hidden;
-	display:block;	
-	
-	-moz-transition:opacity 500ms ease-out 10ms;
-	-webkit-transition:opacity 500ms ease-out 10ms;
-	transition:opacity 500ms ease-out 10ms;
-	
-	.project:hover & {
-		opacity: 0; 
-		overflow: hidden;
-	}
-}
-
-.color-circle-70 {
-	position:absolute;
-	z-index:1;
-	top:0;
-	display:block;
-	overflow:hidden;
-}
-
-/* EACH PROJECT CIRCLE - POSITION & IMAGES */
-.cover {
-	opacity:0;
-	margin-left:20px;
-	margin-top:20px;
-	position:absolute;
-	z-index:3;
-	
-	-moz-transition:opacity 2s;
-	-webkit-transition:opacity 2s;
-	transition:opacity 2s;
-	
-	-moz-transition-delay: .5s;
-	-webkit-transition-delay: .5s;
-	transition-delay: .5s;
-	
-	overflow:hidden;
-}
-
-h2.cover {
-	font-size:24px;
-}
-
-#project1 {
-	margin-right:-1.5%;	
-	position:relative;
-	/*background-color:@divColor;*/
-	clear: both;
-	display: block;
-}
-
-#artist {
- .circleMixin-70px;
- .stroke(2px, solid, #000);
- float:right;
-	a {
-		display:block;
-		width:100%;
-		height:100%;
-	}
-	
-	& h2.cover {
-		color:#FFF;
-		margin-left:14px;
-		margin-top:38px;
-		font-size:.85em;	
-	}
-	
-	&:hover .cover {
-		opacity:1;
-	}
-	
-}
-
-#project2 {
-	padding-left:percentage(140/940);
-	z-index:40;
-	position:absolute;
-	top:10%;
-	/*background-color:@divColor;*/
-	clear: both;
-	display: block;
-}
-
-#re-create {
- .circleMixin-70px;
- .stroke(2px, solid, #000);
- clear: both;
-	a {
-	  display:block;
-	  width:100%;
-	  height:100%;
-	  overflow:hidden;
-	}
-	
-	& h2.cover {
-		color:#000;
-		margin-left:31px;
-		margin-top:16px;
-		font-family: "Myriad Pro", "PT Sans", sans-serif;
-		font-size:8px;	
-		width:58px;
-		overflow:hidden;
-	}
-	
-	&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}
-}
-
-#project3 {
-	padding-left:percentage(320/940);
-	z-index:30;
-	position:absolute;
-	top:15%;
-	/*background-color:@divColor;*/	
-}
-
-#mark {
- .circleMixin-70px;
- .stroke(2px, solid, #000);
-	a {
-		display:block;
-		width:100%;
-		height:100%;
-		overflow:hidden;
-	}
-	
-	& h2.cover {
-		font-size:.8em;
-		margin-left:5%;
-		margin-top:40%;
-		color:#7ED9EF;
-		font-family:"Gotham";
-		letter-spacing:3px;
-		overflow:hidden;
-		display:block;
-	}
-	
-	&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}
-}
-
-#project4 {
-	clear:both;
-	padding-left:percentage(610/940);
-	position:absolute;
-	top:35%;
-	/*background-color:@divColor;*/
-	z-index:10;
-}
-
-#trombone {
- .circleMixin-70px;
- .stroke(2px, solid, #000);
- float:right;
-	a {
-		display:block;
-		width:100%;
-		height:100%;	
-	}
-	
-	& h2.cover {
-		font-size: .7em;
-		margin-left: 0;
-		margin-top: 0;
-		color: #B5A642;
-		text-align: center;
-		font-family: "Trebuchet MS";
-		line-height: 3;
-	}
-	
-	&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}
-}
-
-#project5 {
-	clear:both;
-	padding-left:percentage(45/940);
-	position:absolute;
-	top:52%;
-	/*background-color:@divColor;*/
-	z-index:95;	
-}
-
-#home-connect {
-	.allCirclesMixin;
-	.circleMixin-70px;
-	/*background-color:#CEE9FC;*/
-	
-	& h2.cover {
-		font-size:8px;
-		margin-left:8%;
-		margin-top:42%;
-		color:#FFF;
-		text-align:center;
-		display:block;
-	}	
-}
-
-#project6 {
-	clear:both;
-	padding-left:percentage(220/940);
-	position:absolute;
-	top:47%;
-	/*background-color:@divColor;*/
-	z-index:65;
-}
-
-#major-exploration {
- 	.allCirclesMixin;
-	.circleMixin-70px;
-	
-	& h2.cover {
-		font-size:.55em;
-		margin-left:1%;
-		margin-top:30%;
-		color:red;
-		text-align:center;
-		display:block;
-	}
-}
-
-#project7 {
-	clear:both;
-	padding-left:percentage(155/940);
-	position:absolute;
-	top:75%;
-	z-index:90;
-}
-
-#giddy-throng {
-	.allCirclesMixin;
-	.circleMixin-70px;
-	
- 	& h2.cover {
-		font-size:18px;
-		margin-left:3px;
-		margin-top:55px;
-		color:red;
-		text-align:center;
-	}
-}
-
-#project8 {
-	clear:both;
-	padding-left:percentage(600/940);
-	position:absolute;
-	top:71%;
-	/*background-color:@divColor;*/
-	z-index:60;
-}
-
-#earthship-seattle {
-	.allCirclesMixin;
-	.circleMixin-70px;
-	
- 	& h2.cover {
-		font-family:"PT Mono";
-		font-size:.7em;
-		margin-left:-5px;
-		margin-top:20%;
-		color:#FFF;
-		text-align:center;
-		text-shadow: 0px 0px 5px #000;
-	}
-}
-
-#project9 {
-	clear:both;
-	padding-left:percentage(740/940);
-	position:absolute;
-	top:65%;
-	/*background-color:@divColor;*/
-	z-index:50;
-}
-
-#vo {
-	.allCirclesMixin;
-	.circleMixin-70px;
-	
- 	& h2.cover {
-		font-size:18px;
-		margin-left:12%;
-		margin-top:45px;
-		color:#FFF;
-		text-align:center;
-		text-shadow: 0px 0px 5px #000;
-		
-	}
-}
-/*** END EACH PROJECT CIRCLE - POSITION & IMAGES ***/
