delete redundant styles

--- a/css/1080.less
+++ b/css/1080.less
@@ -82,11 +82,6 @@ i.icon-linkedin {
 }
 /*** END HOME PAGE ***/
 
-header#reCreate {
-	/*background-color: #F4F7F8;*/
-	/*background-color: #040707;	*/
-}
-
 header#reCreate .max1260px {
 	background-color: #C9D5DB;	
 }
@@ -99,6 +94,7 @@ header#reCreate .max1260px {
    margin-left: 0;
 }
 
+/*** UX PROJECTS PAGE ***/
 /* CIRCLE MIXINS */
 .circleMixin-210px {
 	-moz-border-radius:50%;
@@ -155,6 +151,7 @@ header#reCreate .max1260px {
 	display:block;
 	overflow:hidden;
 }
+/* END CIRCLE BEHAVIORS */
 
 /* EACH PROJECT CIRCLE - POSITION & IMAGES */
 #artist {
@@ -187,9 +184,9 @@ header#reCreate .max1260px {
 	
 	& h2.cover {
 		font-size: 1.7em;
-		margin-left: 21%;
+		margin-left: 20%;
 		margin-top: 86px;
-		/* letter-spacing: 5px;*/
+		letter-spacing: 4px;
 	}	
 }
 
@@ -197,19 +194,9 @@ header#reCreate .max1260px {
 	.circleMixin-210px;
 	.stroke(3px, solid, #000);
 	
-	/*& h2.cover {
-		font-size:26px;
-		margin-left:7px;
-		margin-top:13px;
-		color:#FFF;
-		text-align:center;
-	}*/	
-	
 	& h2.cover {
 		font-size: 1.3em;
 		margin-left: 5%;
-		/*margin-top:35%;*/
-		/*text-align:center;*/
 	}	
 }
 
@@ -221,8 +208,6 @@ header#reCreate .max1260px {
 		font-size:23px;
 		margin-left:10%;
 		margin-top:85px;
-		/*color:#FFF;*/
-		/*text-align:center;*/
 	}	
 }
 
@@ -239,13 +224,7 @@ header#reCreate .max1260px {
 		
 #giddy-throng {
 	.circleMixin-210px;
-	.stroke(3px, solid, #000);
-	
-	/*& h2.cover {
-		font-size:26px;
-		margin-left:4px;
-		margin-top:83px;
-	}*/		
+	.stroke(3px, solid, #000);	
 }
 			
 #earthship-seattle {
@@ -261,12 +240,7 @@ header#reCreate .max1260px {
 				
 #vo {
 	.circleMixin-210px;
-	.stroke(3px, solid, #000);
-	
-	/*& h2.cover {
-		font-size:26px;
-		margin-left:10%;
-		margin-top:65px;
-	}*/		
+	.stroke(3px, solid, #000);		
 }
-/* END CIRCLE BEHAVIORS */
+/* END EACH PROJECT CIRCLE - POSITION & IMAGES */
+/*** END UX PROJECTS PAGE ***/
