--- a/css/768.less
+++ b/css/768.less
@@ -119,202 +119,65 @@ i.icon-linkedin {
 	display:block;
 	overflow:hidden;
 }
+/* END CIRCLE BEHAVIORS */
 
 /* EACH PROJECT CIRCLE - POSITION & IMAGES */
-/*.cover {
-	opacity:0;
-	margin-left:20px;
-	margin-top:20px;
-	position:absolute;
-	z-index:3;
-	
-	-moz-transition:opacity 2s;
-	-webkit-transition:opacity 2s;
-	transition:opacity 2s;
-	
-	-moz-transition-delay: .5s;
-	-webkit-transition-delay: .5s;
-	transition-delay: .5s;
-	
-	overflow:hidden;
-}*/
-
-/*h2.cover {
-	font-size:24px;
-}*/
-
-#project1 {
-	/*margin-right:-1.5%;	*/
-	/*position:relative;*/
-	/*background-color:@divColor;*/
-}
-
 #artist {
  .circleMixin-140px;
  .stroke(2px, solid, #000);
- /*float:right;*/
-	/*a {
-		display:block;
-		width:100%;
-		height:100%;
-	}*/
 	
 	& h2.cover {
-		/*color:#FFF;*/
 		font-size:1.3em;	
 		margin-left:23%;
 		margin-top:75px;
 		
 	}
-	
-	/*&:hover .cover {
-		opacity:1;
-	}*/
-	
-}
-
-#project2 {
-	/*padding-left:percentage(140/940);
-	z-index:40;
-	position:absolute;
-	top:10%;*/
-	/*background-color:@divColor;*/
 }
 
 #re-create {
  .circleMixin-140px;
  .stroke(2px, solid, #000);
-	/*a {
-	  display:block;
-	  width:100%;
-	  height:100%;
-	  overflow:hidden;
-	}*/
 	
 	& h2.cover {
-		/*color:#000;*/
+		font-size:.9em;	
+		width:70px;
 		margin-left:67px;
 		margin-top:33px;
-		/*font-family: "Myriad Pro", "PT Sans", sans-serif;*/
-		font-size:13px;	
-		width:73px;
-		/*overflow:hidden;*/
+		
 	}
-	
-	/*&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}*/
-}
-
-#project3 {
-	/*padding-left:percentage(320/940);
-	z-index:30;
-	position:absolute;
-	top:15%;*/
-	/*background-color:@divColor;*/	
 }
 
 #mark {
  .circleMixin-140px;
  .stroke(2px, solid, #000);
-	/*a {
-		display:block;
-		width:100%;
-		height:100%;
-		overflow:hidden;
-	}*/
 	
 	& h2.cover {
 		font-size:1.3em;
 		margin-left:16%;
 		margin-top:57px;
-		/*color:#7ED9EF;*/
-		/*font-family:"Gotham";*/
-		/*letter-spacing:3px;
-		overflow:hidden;
-		display:block;*/
 	}
-	
-	/*&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}*/
-}
-
-#project4 {
-	/*clear:both;*/
-	/*padding-left:percentage(610/940);
-	position:absolute;
-	top:35%;*/
-	/*background-color:@divColor;*/
-	/*z-index:10;*/
 }
 
 #trombone {
  .circleMixin-140px;
  .stroke(2px, solid, #000);
- /*float:right;*/
-	/*a {
-		display:block;
-		width:100%;
-		height:100%;	
-	}*/
-	
-	/*& h2.cover {
-		font-size:17px;
-		margin-left:3px;
-		margin-top:10px;
-		color:#FFF;
-		text-align:center;
-	}*/
 	
 	& h2.cover {
 		font-size: .9em;
 		margin-left: 4%;
 		margin-top: 34%;
-		/*color:#B5A642;*/
-		/*text-align:center;
-		font-family:"Trebuchet MS";*/
 	}
-	
-	/*&:hover .cover {
-		opacity:1;
-		overflow:hidden;
-	}*/
-}
-
-#project5 {
-	/*clear:both;
-	padding-left:percentage(45/940);
-	position:absolute;
-	top:52%;*/
-	/*background-color:@divColor;*/
-	/*z-index:95;	*/
 }
 
 #home-connect {
 	.allCirclesMixin;
 	.circleMixin-140px;
-	/*background-color:#CEE9FC;*/
 	
 	& h2.cover {
 		font-size:15px;
 		margin-left:11%;
 		margin-top:56px;
-		/*color:#FFF;
-		text-align:center;
-		display:block;*/
 	}	
-}
-
-#project6 {
-	/*clear:both;
-	padding-left:percentage(220/940);
-	position:absolute;
-	top:47%;*/
-	/*background-color:@divColor;*/
-	/*z-index:65;*/
 }
 
 #major-exploration {
@@ -326,39 +189,12 @@ i.icon-linkedin {
 		margin-left:13%;
 		margin-top:60px;
 		color:red;
-		/*text-align:center;
-		display:block;*/
 	}
 }
-
-/*#project7 {
-	clear:both;
-	padding-left:percentage(155/940);
-	position:absolute;
-	top:75%;
-	z-index:90;
-}*/
 
 #giddy-throng {
 	.allCirclesMixin;
 	.circleMixin-140px;
-	
- 	/*& h2.cover {
-		font-size:18px;
-		margin-left:3px;
-		margin-top:55px;
-		color:red;
-		text-align:center;
-	}*/
-}
-
-#project8 {
-	/*clear:both;
-	padding-left:percentage(600/940);
-	position:absolute;
-	top:71%;*/
-	/*background-color:@divColor;*/
-	/*z-index:60;*/
 }
 
 #earthship-seattle {
@@ -366,51 +202,19 @@ i.icon-linkedin {
 	.circleMixin-140px;
 	
  	& h2.cover {
-		/*font-family:"PT Mono";*/
 		font-size:18px;
 		margin-left:0;
 		margin-top:38px;
 		color:#FFF;
-		/*text-align:center;
-		text-shadow: 0px 0px 5px #000;*/
 	}
-}
-
-#project9 {
-	/*clear:both;
-	padding-left:percentage(740/940);
-	position:absolute;
-	top:65%;*/
-	/*background-color:@divColor;*/
-	/*z-index:50;*/
 }
 
 #vo {
 	.allCirclesMixin;
 	.circleMixin-140px;
-	
- 	/*& h2.cover {
-		font-size:18px;
-		margin-left:12%;
-		margin-top:45px;
-		color:#FFF;
-		text-align:center;
-		text-shadow: 0px 0px 5px #000;
-		
-	}*/
 }
 /*** END EACH PROJECT CIRCLE - POSITION & IMAGES ***/
 /***** END UX PROJECTS PAGE *****/
-
-/* IMAGE SIZES */
-/*.project_details_img_large {
-	display:block;	
-}*/
-
-/*.project_details_img_small {
-	display:none;	
-}*/
-/* END IMAGE SIZES */
 
 /* PROJECT PAGES */
 .projectDetails768 {
