480px - 767px media query
re-arranged elements

--- a/css/1080.less
+++ b/css/1080.less
@@ -6,7 +6,7 @@
 #home-page-container,
 #page-projects {
 	background-image: url("../images/grid-1280x15-.jpg");
-	background-image: url("../images/bg-980px-grid-.png");
+	background-image: url("../images/grid-980px-.png");
 	background-position: center;
 	background-repeat: repeat-y;
 }
