--- a/css/mobile.less
+++ b/css/mobile.less
@@ -116,7 +116,9 @@ ul li ul {
 	min-height: 100vh;
 	
 	/*position: relative;*/
-	padding-bottom: 50px;
+	/*padding-bottom: 50px;*/
+	/*padding-bottom: 3em;*/
+	margin-bottom: 3em;
 }
 
 /*** END GLOBAL SELECTORS ***/
