project pages - headers

--- a/css/768.less
+++ b/css/768.less
@@ -9,6 +9,18 @@
 }
 /*** END Grids for development only ***/
 
+/*** GLOBAL STYLES ***/
+.max980px {
+	max-width:980px;
+	margin:auto;	
+}
+
+.section-label {
+	padding-left: percentage(20/980);
+	padding-right: percentage(20/980);
+}
+/*** END GLOBAL STYLES ***/
+
 /*** HOME PAGE ***/
 .home-page-container {
 	margin-bottom:50px;	
@@ -20,6 +32,11 @@
 	position: relative; /* positions relative to normal position */
 	top:25px;
 	margin-top:0;
+}
+
+.contact-icons.max1260px {
+	padding: 0;
+	margin: 0;
 }
 
 i.icon-github,
@@ -35,7 +52,6 @@ i.icon-linkedin {
 .header-main {	
 	margin-bottom:50px;
 }
-
 /*** END HOME PAGE ***/
 
 /***** UX PROJECTS PAGE *****/
@@ -216,6 +232,11 @@ i.icon-linkedin {
 
 /* PROJECT PAGES */
 .page-body {
+	padding-left: percentage(20/980);
+	padding-right: percentage(20/980);
+}
+
+header .max1260px {
 	padding-left: percentage(20/980);
 	padding-right: percentage(20/980);
 }
