--- a/css/mobile.less
+++ b/css/mobile.less
@@ -131,7 +131,7 @@ ul li ul {
 .mobileProjectMixin {
    border: .03em solid #000;
    height:50px;
-   overflow:hidden;
+   overflow: hidden;
    width:96%;
    margin:auto;
    margin-bottom:2%;	
@@ -155,7 +155,7 @@ ul li ul {
 	& .project_details_p { 
 		margin-bottom:.7em;
 		float:left;
-		padding:0 0% 2% 0%;
+		padding:0 0 1.7em 0;
 		font-size:.8em;
 		width:96%;
 		margin:auto;
@@ -313,7 +313,7 @@ header#header-giddy-throng img {
 }
 
 header#header-nan img {
-	margin-left: 10px;	
+	/*margin-left: percentage(10/320);*/	
 }
 
 #trombone {
@@ -343,7 +343,7 @@ header#header-homeconnect {
 
 header#header-major-exploration {
  	background-color: #B3B3B5;
- 	overflow:hidden;
+ 	overflow: hidden;
 }
 
 #header-earthship-seattle img {
@@ -422,7 +422,7 @@ header#header-joemicheals {
 
 .cover h2 {
 	text-decoration:none;
-	overflow:hidden;	
+	overflow: hidden;	
 }
 
 #artist h2.cover {
@@ -442,12 +442,12 @@ header#header-joemicheals {
 	margin-top:-17%;
 	font-size:1.4em;
 	font-family: "Myriad Pro", "PT Sans", sans-serif;
-	overflow:hidden;	
+	overflow: hidden;	
 }
 
 #re-create a {
 	text-decoration:none;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 #major-exploration h2.cover {
@@ -504,7 +504,7 @@ header#reCreate {
 }
 
 header#header-trombone {
-	overflow:hidden;
+	overflow: hidden;
 	height:110px;
 	background-image: url("../images/wavelength-gold-on-green-481x110px-outerglow-2.png");
 }
