--- a/css/480.less
+++ b/css/480.less
@@ -39,35 +39,35 @@ h2 {
 		margin-bottom:.4em;
 		float:left;
 		padding:0 2% 2% 0%;	
-		overflow:hidden;
+		overflow: hidden;
 	}
 	/* all paragraphs as a group in project_details */
 	& .project_details_p { 
 		/*width:percentage(300/460);*/
 		width: 100%;
-		padding-top:0;
+		padding-top: 0;
 		padding-bottom: 1.5em;
-		padding-left:0;
-		font-size:.8em; /* breaks reCreate at 8.5em and larger */
-		overflow:hidden;
+		padding-left: 0;
+		font-size: .85em;
+		overflow: hidden;
 	}
 	
 	& .project_details_p ul {
-		clear:both;	
-		padding-left:1.375em;
+		clear: both;	
+		padding-left: 1.375em;
 	}
 	
 	& .pdf-link {
-		margin-top:2em;	
+		margin-top: 2em;	
 	}
 	/* div contining the image */
 	& .project_details_img {
 		/*width:percentage(300/460);*/
 		width: 100%;
-		overflow:hidden;
-		border:2px solid grey;
-		text-align:center;
-		alignment-baseline:baseline;
+		overflow: hidden;
+		border: 2px solid grey;
+		text-align: center;
+		alignment-baseline: baseline;
 	}
 }
 
@@ -178,6 +178,11 @@ h2 {
 	padding-top: .15em;
 	padding-left: percentage(10/480);
 	padding-right: percentage(10/480);
+}
+
+header .max1260px {
+	padding-left: percentage(10/480);
+	paddingright: percentage(10/480);
 }
 /*** END ALL PAGES - GLOBAL STYLES ***/
 
@@ -364,7 +369,7 @@ i.icon-linkedin {
 	
 	&:hover .cover {
 		opacity:1;
-		overflow:hidden;
+		overflow: hidden;
 	}
 	
 }
@@ -376,7 +381,7 @@ i.icon-linkedin {
 	width:70px;
 	height:70px;
 	background-color:white;
-	overflow:hidden;
+	overflow: hidden;
 }
 /*** END CIRCLE MIXINS ***/
 
@@ -394,7 +399,7 @@ i.icon-linkedin {
 	top:0;
 	z-index:2;
 	opacity:1;
-	overflow:hidden;
+	overflow: hidden;
 	display:block;	
 	
 	-moz-transition:opacity 500ms ease-out 10ms;
@@ -412,7 +417,7 @@ i.icon-linkedin {
 	z-index:1;
 	top:0;
 	display:block;
-	overflow:hidden;
+	overflow: hidden;
 }
 /* END CIRCLE BEHAVIORS */
 
@@ -432,7 +437,7 @@ i.icon-linkedin {
 	-webkit-transition-delay: .5s;
 	transition-delay: .5s;
 	
-	overflow:hidden;
+	overflow: hidden;
 }
 
 h2.cover {
@@ -488,7 +493,7 @@ h2.cover {
 	  display:block;
 	  width:100%;
 	  height:100%;
-	  overflow:hidden;
+	  overflow: hidden;
 	}
 	
 	& h2.cover {
@@ -498,12 +503,12 @@ h2.cover {
 		margin-left:48%;
 		margin-top:16px;
 		font-family: "Myriad Pro", "PT Sans", sans-serif;
-		overflow:hidden;
+		overflow: hidden;
 	}
 	
 	&:hover .cover {
 		opacity:1;
-		overflow:hidden;
+		overflow: hidden;
 	}
 }
 
@@ -522,7 +527,7 @@ h2.cover {
 		display:block;
 		width:100%;
 		height:100%;
-		overflow:hidden;
+		overflow: hidden;
 	}
 	
 	& h2.cover {
@@ -532,13 +537,13 @@ h2.cover {
 		color:#7ED9EF;
 		font-family:"Gotham";
 		letter-spacing:3px;
-		overflow:hidden;
+		overflow: hidden;
 		display:block;
 	}
 	
 	&:hover .cover {
 		opacity:1;
-		overflow:hidden;
+		overflow: hidden;
 	}
 }
 
@@ -573,7 +578,7 @@ h2.cover {
 	
 	&:hover .cover {
 		opacity:1;
-		overflow:hidden;
+		overflow: hidden;
 	}
 }
 
@@ -745,6 +750,7 @@ h2.cover {
 #page-nan {
 	top: 200%;
 	color: #000;
+	overflow: hidden;
 }
 
 /* structure */
@@ -775,12 +781,13 @@ header#header-nan img {
 	top:300%;
 	background:#FFF;
 	color:#000;
-	overflow:hidden;
+	overflow: hidden;
+	clear: both;
 }
 
 header#reCreate {
-	overflow:hidden;
-	margin-top:0;
+	overflow: hidden;
+	/*margin-top:0;*/
 	background-color:@reCreate-Blue;	
 	/*background-image:url("images/tfleischauer-web202-a11-logo-441x110.png");*/
 }
@@ -845,11 +852,11 @@ header#reCreate img {
 #page-mark {
 	top:400%;
 	color:#000;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 header#header-mark {
-	overflow:hidden;	
+	overflow: hidden;	
 }
 
 /* MARK NAV 480 px and larger */
@@ -863,7 +870,7 @@ header#header-mark {
 #page-trombone {
 	top:500%;
 	color:#000;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 header#header-trombone {
@@ -891,7 +898,7 @@ header#header-trombone {
 #page-major-exploration {
 	top:600%;
 	color:#000;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 header#header-major-exploration {
@@ -915,7 +922,7 @@ header#header-major-exploration {
 #page-homeconnect {
 	top:700%;
 	color:#000;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 header#header-homeconnect {
@@ -945,7 +952,7 @@ header#header-home-connect img {
 #page-joemicheals {
 	top:800%;
 	color:#000;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 header#header-joemicheals {
