.no-border, .header-main, .section-label

--- a/css/1080.less
+++ b/css/1080.less
@@ -26,6 +26,13 @@
 	display:block;	
 }
 
+.section-label {
+	/*width: 940px;
+	margin: auto;*/
+	padding-left: percentage(20/980);
+	padding-right: percentage(20/980);
+}
+
 .projectDetails1080 {
    & .project_details_p { 
 		font-size:1em;
@@ -59,10 +66,6 @@
 /*** END GLOBAL ***/
 
 /*** HOME PAGE ***/
-.home-page-container {
-	/*margin-bottom:75px;	*/
-}
-
 .header-main {	
 	margin-bottom:75px;
 }
@@ -81,18 +84,6 @@ i.icon-linkedin {
 	font-size:3em;
 }
 /*** END HOME PAGE ***/
-
-header#reCreate .max1260px {
-	background-color: #C9D5DB;	
-}
-
-#header-joemicheals h1 {
-   font-size: 2.5em;
-   width:820px;
-   position: relative;
-   top:20px;
-   margin-left: 0;
-}
 
 /*** UX PROJECTS PAGE ***/
 /* CIRCLE MIXINS */
@@ -244,3 +235,17 @@ header#reCreate .max1260px {
 }
 /* END EACH PROJECT CIRCLE - POSITION & IMAGES */
 /*** END UX PROJECTS PAGE ***/
+
+/*** PROJECTS ***/
+header#reCreate .max1260px {
+	background-color: #C9D5DB;	
+}
+
+#header-joemicheals h1 {
+   font-size: 2.5em;
+   width:820px;
+   position: relative;
+   top:20px;
+   margin-left: 0;
+}
+/*** END PROJECTS ***/
