--- a/css/480.less
+++ b/css/480.less
@@ -180,10 +180,10 @@ h2 {
 	padding-right: percentage(10/480);
 }
 
-header .max1260px {
+/*header .max1260px {
 	padding-left: percentage(10/480);
-	paddingright: percentage(10/480);
-}
+	padding-right: percentage(10/480);
+}*/
 /*** END ALL PAGES - GLOBAL STYLES ***/
 
 /*** ONE-PAGE NAV MAIN CONTROLS ***/
@@ -743,7 +743,7 @@ h2.cover {
 }
 
 .no-border {
-	border:none;	
+	border: none;	
 }
 
 /*** NAN PAGE ***/
