--- a/css/mobile.less
+++ b/css/mobile.less
@@ -192,17 +192,20 @@ ul li ul {
 }
 
 .header-main {
-	margin-bottom:25px;
-	background-color:#262626;
-	height:60px;
-	line-height:60px;	
-	padding:0 10px;
+	margin-bottom: 25px;
+	background-color: #262626;
+	height: 60px;
+	line-height: 60px;	
+	/*padding-top: 0;*/
+	padding-left: 2%;
+	padding-right: 2%;
 }
 
 .header-main p {
 	font-size:1.75em;
 	color:#FFF;	
 	display:inline-block;
+	
 }
 
 .header-main a:link,
@@ -252,12 +255,17 @@ i.icon-linkedin {
 
 .section-label {
 	font-size:1.55em;
-	margin: 15px 0 10px 10px;	
+	/*margin: 15px 10px 10px 10px;	*/
+	margin-top: 15px;
+	margin-right: 2%;
+	margin-bottom: 15px;
+	margin-left: 2%;
+	
 }
 
 #page-contact .header-main,
 #page-thankyou .header-main {
-	margin-bottom:0px;	
+	/*margin-bottom:0px;*/	
 }
 
 h2 {
@@ -715,7 +723,7 @@ fieldset {
 }
 
 .no-border {
-	border:none;
+	border: none;
 }
 
 .project_details_img.no-border {
